nimcuda/cublas_api.nim


proc cublasSsyrk_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; n: cint; k: cint; alpha: ptr cfloat;
                    A: ptr cfloat; lda: cint; beta: ptr cfloat; C: ptr cfloat; ldc: cint): cublasStatus_t {.
    cdecl, importc: "cublasSsyrk_v2", dynlib: libName.}
proc cublasSsyrk_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; n: clonglong; k: clonglong;
                       alpha: ptr cfloat; A: ptr cfloat; lda: clonglong;
                       beta: ptr cfloat; C: ptr cfloat; ldc: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasSsyrk_v2_64", dynlib: libName.}
proc cublasDsyrk_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; n: cint; k: cint; alpha: ptr cdouble;
                    A: ptr cdouble; lda: cint; beta: ptr cdouble; C: ptr cdouble; ldc: cint): cublasStatus_t {.
    cdecl, importc: "cublasDsyrk_v2", dynlib: libName.}
proc cublasDsyrk_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; n: clonglong; k: clonglong;
                       alpha: ptr cdouble; A: ptr cdouble; lda: clonglong;
                       beta: ptr cdouble; C: ptr cdouble; ldc: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasDsyrk_v2_64", dynlib: libName.}
proc cublasCsyrk_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; n: cint; k: cint; alpha: ptr cuComplex;
                    A: ptr cuComplex; lda: cint; beta: ptr cuComplex; C: ptr cuComplex;
                    ldc: cint): cublasStatus_t {.cdecl, importc: "cublasCsyrk_v2",
    dynlib: libName.}
proc cublasCsyrk_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; n: clonglong; k: clonglong;
                       alpha: ptr cuComplex; A: ptr cuComplex; lda: clonglong;
                       beta: ptr cuComplex; C: ptr cuComplex; ldc: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasCsyrk_v2_64", dynlib: libName.}
proc cublasZsyrk_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; n: cint; k: cint;
                    alpha: ptr cuDoubleComplex; A: ptr cuDoubleComplex; lda: cint;
                    beta: ptr cuDoubleComplex; C: ptr cuDoubleComplex; ldc: cint): cublasStatus_t {.
    cdecl, importc: "cublasZsyrk_v2", dynlib: libName.}
proc cublasZsyrk_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; n: clonglong; k: clonglong;
                       alpha: ptr cuDoubleComplex; A: ptr cuDoubleComplex;
                       lda: clonglong; beta: ptr cuDoubleComplex;
                       C: ptr cuDoubleComplex; ldc: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasZsyrk_v2_64", dynlib: libName.}
proc cublasCsyrkEx*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                   trans: cublasOperation_t; n: cint; k: cint; alpha: ptr cuComplex;
                   A: pointer; Atype: cudaDataType; lda: cint; beta: ptr cuComplex;
                   C: pointer; Ctype: cudaDataType; ldc: cint): cublasStatus_t {.cdecl,
    importc: "cublasCsyrkEx", dynlib: libName.}
proc cublasCsyrkEx_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                      trans: cublasOperation_t; n: clonglong; k: clonglong;
                      alpha: ptr cuComplex; A: pointer; Atype: cudaDataType;
                      lda: clonglong; beta: ptr cuComplex; C: pointer;
                      Ctype: cudaDataType; ldc: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCsyrkEx_64", dynlib: libName.}
proc cublasCsyrk3mEx*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                     trans: cublasOperation_t; n: cint; k: cint; alpha: ptr cuComplex;
                     A: pointer; Atype: cudaDataType; lda: cint; beta: ptr cuComplex;
                     C: pointer; Ctype: cudaDataType; ldc: cint): cublasStatus_t {.
    cdecl, importc: "cublasCsyrk3mEx", dynlib: libName.}
proc cublasCsyrk3mEx_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                        trans: cublasOperation_t; n: clonglong; k: clonglong;
                        alpha: ptr cuComplex; A: pointer; Atype: cudaDataType;
                        lda: clonglong; beta: ptr cuComplex; C: pointer;
                        Ctype: cudaDataType; ldc: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCsyrk3mEx_64", dynlib: libName.}
##  HERK

proc cublasCherk_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; n: cint; k: cint; alpha: ptr cfloat;
                    A: ptr cuComplex; lda: cint; beta: ptr cfloat; C: ptr cuComplex;
                    ldc: cint): cublasStatus_t {.cdecl, importc: "cublasCherk_v2",
    dynlib: libName.}
proc cublasCherk_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; n: clonglong; k: clonglong;
                       alpha: ptr cfloat; A: ptr cuComplex; lda: clonglong;
                       beta: ptr cfloat; C: ptr cuComplex; ldc: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasCherk_v2_64", dynlib: libName.}
proc cublasZherk_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                    trans: cublasOperation_t; n: cint; k: cint; alpha: ptr cdouble;
                    A: ptr cuDoubleComplex; lda: cint; beta: ptr cdouble;
                    C: ptr cuDoubleComplex; ldc: cint): cublasStatus_t {.cdecl,
    importc: "cublasZherk_v2", dynlib: libName.}
proc cublasZherk_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                       trans: cublasOperation_t; n: clonglong; k: clonglong;
                       alpha: ptr cdouble; A: ptr cuDoubleComplex; lda: clonglong;
                       beta: ptr cdouble; C: ptr cuDoubleComplex; ldc: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasZherk_v2_64", dynlib: libName.}
proc cublasCherkEx*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                   trans: cublasOperation_t; n: cint; k: cint; alpha: ptr cfloat;
                   A: pointer; Atype: cudaDataType; lda: cint; beta: ptr cfloat;
                   C: pointer; Ctype: cudaDataType; ldc: cint): cublasStatus_t {.cdecl,
    importc: "cublasCherkEx", dynlib: libName.}
proc cublasCherkEx_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                      trans: cublasOperation_t; n: clonglong; k: clonglong;
                      alpha: ptr cfloat; A: pointer; Atype: cudaDataType;
                      lda: clonglong; beta: ptr cfloat; C: pointer;
                      Ctype: cudaDataType; ldc: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCherkEx_64", dynlib: libName.}
proc cublasCherk3mEx*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                     trans: cublasOperation_t; n: cint; k: cint; alpha: ptr cfloat;
                     A: pointer; Atype: cudaDataType; lda: cint; beta: ptr cfloat;
                     C: pointer; Ctype: cudaDataType; ldc: cint): cublasStatus_t {.
    cdecl, importc: "cublasCherk3mEx", dynlib: libName.}
proc cublasCherk3mEx_64*(handle: cublasHandle_t; uplo: cublasFillMode_t;
                        trans: cublasOperation_t; n: clonglong; k: clonglong;
                        alpha: ptr cfloat; A: pointer; Atype: cudaDataType;
                        lda: clonglong; beta: ptr cfloat; C: pointer;
                        Ctype: cudaDataType; ldc: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCherk3mEx_64", dynlib: libName.}
##  SYR2K / HER2K
